--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     <section class="cta">
         <h2>Ready to Explore?</h2>
         <p>Update your game to experience these exciting new features</p>
-        <button class="cta-button"><a href='https://mcpelife.com/minecraft-pe-1-21-60-27/>'Update Now</a></button>
+        <button class="cta-button"><a href='https://mcpelife.com/minecraft-pe-1-21-60-27/'>Update Now</a></button>
     </section>
 
     <script>
