--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
             }
         }
 
+        a{
+            appearance: button;
+        }
+
         @keyframes fadeInUp {
             from {
                 opacity: 0;
@@ -330,7 +334,7 @@
     <section class="cta">
         <h2>Ready to Explore?</h2>
         <p>Update your game to experience these exciting new features</p>
-        <button class="cta-button"><a href='https://mcpelife.com/minecraft-pe-1-21-60-27/'>Update Now</a></button>
+        <a class="cta-button" href='https://mcpelife.com/minecraft-pe-1-21-60-27/'>Update Now</a>
     </section>
 
     <script>
