--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     <section class="cta">
         <h2>Ready to Explore?</h2>
         <p>Update your game to experience these exciting new features</p>
-        <a class="cta-button" href='www.mcpelife.com/minecraft-pe-1-21-60-27/'>Update Now</a>
+        <a class="cta-button" href='google.com/www.mcpelife.com/minecraft-pe-1-21-60-27/'>Update Now</a>
     </section>
 
     <script>
